--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,8 +32,8 @@ h2 {
   padding: 0 15px; }
 
 img {
-  max-widt: 100%;
-  wertical-align: middle; }
+  max-width: 100%;
+  vertical-align: middle; }
 
 a {
   text-decoration: none; }
@@ -56,17 +56,19 @@ header {
   right: 0;
   background-color: #FCFCFC; }
   header .navbar {
-    hight: 90px; }
+    height: 65px; }
     header .navbar .nav-logo {
       float: left;
       position: relative;
       top: 50%;
+      transform: translateY(-50%);
       z-index: -50; }
 
 .main-menu-content {
   float: right;
   position: relative;
-  top: 50%; }
+  top: 50%;
+  transform: translateY(-50%); }
   .main-menu-content ul {
     list-style-type: none; }
     .main-menu-content ul li {
@@ -77,7 +79,7 @@ header {
         font-size: 14px;
         font-family: "Open Sans", sans-serif;
         font-weight: 300;
-        padding: 20px 40 px;
+        padding: 20px 40px;
         line-height: 20px;
         transition: all 0.2s ease-in-out; }
         .main-menu-content ul li a:hover {
