--- a/scss/helpers.scss
+++ b/scss/helpers.scss
@@ -35,6 +35,7 @@ $desktop: only screen and (min-width:1200px);
 @mixin center-vertical {
   position: relative;
   top: 50%;
+  transform: translateY(-50%);
 }
 
 //Widocznosc
@@ -150,11 +151,4 @@ $desktop: only screen and (min-width:1200px);
   transition: all $lenght ease-in-out;
 }
 
-//Translate 3D
-
-@mixin translate3d($move-x,$move-y,$move-z) {
-  transform: translateX($move-x);
-  transform: translateY($move-y);
-  transform: translateZ($move-z);
-}
 
